# cord-cpp

./: .gitignore  CMakeLists.txt  IDEA.md  README.md  amalgamate.py  cord.hpp  run_tests.sh
.github/workflows/: amalgamate.yml  gen_single_header.yml  test.yml
examples/: CMakeLists.txt
examples/arrays/: arrays.conf  arrays.cpp
examples/config_markers/: config_markers.conf  config_markers.cpp
examples/optionals/: optionals.conf  optionals.cpp
examples/simplest/: simplest.conf  simplest.cpp
manual_tests/: errors.conf  errors.cpp  test1.conf  test1.cpp  test2.conf  test2.cpp
scripts/: gen_single_header.py  run_tests.sh
src/: common.hpp  cord.hpp  errors.hpp  exception.hpp  field.hpp  schema.hpp
test_files/: test1.cpp
tests/: CMakeLists.txt  test_basic_parsing.cpp  test_comments.cpp  test_custom_markers.cpp  test_errors.cpp  test_file_parsing.cpp  test_float_parsing.cpp  test_get_or.cpp  test_get_or_type_safety.cpp  test_inline_comments.cpp  test_markers.cpp  test_parsing.cpp  test_schema.cpp  test_strict_mode.cpp  test_type_assertions.cpp  test_vectors.cpp  test_whitespace.cpp
tests/compile_fail/: test_get_or_type_safety.cpp  test_type_assertions.cpp
